0.8.0b7:
  Fix missing event issue.
  Tidy capture code.
  Specify Python 3
0.8.0b6: Simplify state checking; bring API up to date and remove deprecated
    calls
  Add back the packet docs.
0.8.0b5: Add initial 8-in-1 sensor support
    [thanks xirtamoen for lending the sensors]
  Support Arlo v4 APIs
    [thanks JeffSteinbok for the implementation]
0.8.0b4: Allow ping when devices are on chargers.
  Added event_id and time to URL paths.
  Added custom cipher list.
0.8.0b3: Better snapshot tidy up.
  Improve debugging - add component or ID to debug entry.
  Allow actual user agent to be used by prefixing with a !
  Undo broken IMAP
  Fix doorbell motion
  Fix doorbell capabilities
0.8.0b2: Better shutdown of threads.
  Allow ciphers to be set to SSL defaults.
  Try to parse all email parts looking for the authentication code.
  Open mailbox read only, stops the wrong emails getting marked as read.
  Better detection of backend.
0.8.0b1: Fix yahoo imap support.
  Fix creation of ArloSnapshot objects.

0.8.0a15: Fix media library day count.
0.8.0a14: Fix sse reconnect.
  Provide access to base station recordings.
0.8.0a13: Better loading of initial settings from new devices.
  Update devices from device refresh
  Allow old backend to be used.
  Quiet down traditional chimes.
  Fix up missing timezones.
0.8.0a12: Use new MQTT backend
0.8.0a11: Add random user agent support.
0.8.0a10: Don't request resources for Wirefree doorbells.
0.8.0a9: Support IMAP port.
         Don't request resources for Essential cameras.
0.8.0a8: Don't ping Pro 3 floodlight.
0.8.0a7: Don't ping Essential and Pro 4 cameras.
         Stop when asked to.
0.8.0a6: Fixed schedule handling.
         Handle events in the background thread.
0.8.0a5: Update token to map to email address
         Save last video details
         Don't signal unless information has really changed
0.8.0a4: Add GO camera support.
         Fixed header issue.
0.8.0a3: Save authentication token.